# MarketPilot

./: .env-example  ARCHITECTURE.md  BLOCK1.md  BLOCK2.md  BLOCK3.md  BLOCK4.md  CLAUDE.md  FLOW_AND_AGENTS.md  FOR_DEVELOPERS.md  LICENSE  README.md  REPORT.md  SYBILION_DOC.md  Track_3_description.md  Turtorial.md  conftest.py  nixpacks.toml  railpack.json  start.sh
backend/: MODEL.md  TASK_report_agent_v2.md  TECHNICAL_ARCHITECTURE.md  __init__.py  backend_README.md  data_engineer.py  data_sources.py  model_created.md  report_agent.py  requirements.txt  sybilion_client.py  translation_agent.py
data-engineer-agent/: .env.example  .gitignore  AGENTS.md  SYSTEM_STATE.md  codex_data_engineer_agent_mvp_plan.md  pyproject.toml
data-engineer-agent/app/: config.py  main.py
data-engineer-agent/app/adapters/: commodities.py  eurostat.py
data-engineer-agent/app/agents/: code_planner.py  intent_extractor.py  source_planner.py
data-engineer-agent/app/registry/: datasets.yaml  loader.py  sources.yaml
data-engineer-agent/app/sandbox/: runner.py
data-engineer-agent/app/sandbox/templates/: eurostat_jsonstat.py.j2  wfs_feature.py.j2
data-engineer-agent/app/schemas/: plan_schema.py  request_schema.py
data-engineer-agent/app/validation/: result_validator.py
data-engineer-agent/docker/: Dockerfile.runner
data-engineer-agent/tests/: test_api.py  test_commodities_connector.py  test_eurostat_adapter.py  test_intent_extractor.py  test_registry_loader.py  test_result_validator.py  test_source_planner.py
frontend/: CLAUDE.md  package-lock.json  vite.config.ts
(+70 files in other folders)
