[project]
name = "data-engineer-agent"
version = "0.1.0"
description = "MVP Data Engineer Agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.1",
  "requests>=2.32.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "openpyxl>=3.1.0",
  "odfpy>=1.4.1",
  "lxml>=5.2.0",
  "python-dateutil>=2.9.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
